@@ -68,8 +68,14 @@ cli_option cli_options[] = {
   { 'O', 0,    cli_option::string, 0, &o_dummys, "Ignored", 0 },
   {  0, "odb", cli_option::flag, 0, &o_dummyi,
      "Deliver in background (always true)", 0 },
+  {  0, "odd", cli_option::flag, 0, &o_dummyi,
+     "Defer delivery (ignored)", 0 },
   {  0, "odf", cli_option::flag, 0, &o_dummyi,
      "Deliver in foreground (ignored)", 0 },
+  {  0, "odi", cli_option::flag, 0, &o_dummyi,
+     "Deliver interactively (synchronously) (ignored)", 0 },
+  {  0, "odq", cli_option::flag, 0, &o_dummyi,
+     "Just queue the message (ignored)", 0 },
   {  0, "oem", cli_option::flag, 0, &o_dummyi,
      "Ignored", 0 },
   {  0, "em",  cli_option::flag, 0, &o_dummyi,
